img added and section tag completed

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </header>
+    <section>
+        <h2 id="txt">HII WINTER</h2>
+        <img id="m1" src="./img/mountain_01_cov9ur.png" alt="">
+        <img id="m2" src="./img/mountain_02_i7icyw.png" alt="">
+        <img id="m3" src="./img/mountain_03_kdefif.png" alt="">
+        <img id="m4" src="./img/mountain_04_wfcnsz.png" alt="">
+        <img id="tr" src="./img/trees_sj3uer.png" alt="">
+        <img id="crs" src="./img/cable_cars_ybjlp3.png" alt="">
+        <img id="house" src="./img/house_eq5aoz.png" alt="">
+    </section>
     
 </body>
 </html>
