script.js added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img id="crs" src="./img/cable_cars_ybjlp3.png" alt="">
         <img id="house" src="./img/house_eq5aoz.png" alt="">
     </section>
-    <div class="paragragh">
+    <div class="paragraph">
         <h2>Parallax Scolling Website</h2>
         <p>sectetur aperiam laborum ullam et, voluptatum, adipisicing elit. Itaque fugit atque odio consectetur aperiam l   adipisicing elit. Itaque fugit atque odio consectetur aperiam l ad temporibus quam itaque non minima rem ullam.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque fugit atque odio consectetur aperiam laborum ullam et, voluptatum vero? Assumenda, tenetur necessitatibus. Beatae, iusto. Consectetur quibusdam beatae deserunt dolorem id hic, quaerat odio consequuntur. Corrupti accusantium reiciendis sit officiis, possimus id facilis quidem fugiat cum asperiores, deleniti, inventore suscipit impedit obcaecati recusandae assumenda deserunt nam dolorem unde veniam corporis alias. Consequatur obcaecati distinctio nulla dignissimos repudiandae, tempore placeat! Atque veniam culpa repellat et reprehenderit nulla excepturi. Quidem quia et, quas sequi eveniet soluta expedita eos in beatae maxime blanditiis libero dolor sit temporibus magnam nemo, voluptas, error dolorum similique numquam delectus eligendi repudiandae. Illo eveniet, at repellendus ipsa quam est quibusdam beatae id officiis commodi deserunt odio similique animi illum eligendi, optio porro! Minima odio dignissimos, animi molestias porro enim perspiciatis, sit, saepe totam laborum tempora. Molestiae quo suscipit fugiat corrupti autem, ad temporibus quam itaque non minima rem ullam.</p>
